--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
     "@types/react": "^17.0.38",
     "react": "^17.0.2",
     "typescript": "^4.5.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7"
   }
 }
