--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/react": "^17.0.38",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
@@ -9,6 +10,7 @@
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.2.3",
     "ts-loader": "^9.2.6",
     "webpack": "^5.65.0",
