--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@babel/preset-typescript": "^7.16.7",
     "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.2.3",
+    "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.6",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.2"
   }
 }
